--- a/node-backend/package.json
+++ b/node-backend/package.json
@@ -4,9 +4,14 @@
   "description": "node-backend",
   "main": "index.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "FlutterStack",
   "license": "ISC",
-  "dependencies": {}
+  "dependencies": {
+    "express": "4.17.1",
+    "express-graphql": "0.9.0",
+    "graphql": "14.5.5"
+  }
 }
