--- a/node-backend/package.json
+++ b/node-backend/package.json
@@ -5,13 +5,17 @@
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "eslint ."
   },
   "author": "FlutterStack",
   "license": "ISC",
   "dependencies": {
-    "express": "4.17.1",
-    "express-graphql": "0.9.0",
-    "graphql": "14.5.5"
+    "apollo-server": "^2.9.4",
+    "graphql": "^14.5.8",
+    "uuid": "^3.3.3"
+  },
+  "devDependencies": {
+    "eslint": "^6.5.1",
+    "eslint-config-google": "^0.14.0"
   }
 }
